[metadata]
name = canvas_lms
version = 0.0.1
description = Tools for working with Canvas LMS
url = https://github.com/krasting/canvas_lms
author = John Krasting
author_email = krasting@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: Public Domain
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
long_description_content_type=text/x-rst
long_description =
    **canvas_lms** is a Python package in the public domain

    More Information
    ----------------
    - Source code: `<http://github.com/krasting/canvas_lms>`_

[options]
packages = find:
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy>=1.17
    pandas
